# pove

./: .gitignore  Cargo.toml  rust-toolchain.toml
elf/: riscv32im-succinct-zkvm-elf
guest/: Cargo.toml
guest/src/: lib.rs
host/: Cargo.toml
host/src/: main.rs
lib/: Cargo.toml
lib/src/: lib.rs
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
program/: Cargo.toml
program/src/: main.rs
script/: Cargo.toml
src/: main.rs
